# we-do

./: .example.env  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml
backend/: pyproject.toml
backend/config/: settings.py  urls.py
backend/tasks/: admin.py  models.py  urls.py  views.py
backend/tasks/migrations/: 0001_initial.py  0002_todoitem_is_deleted.py
docker/django/: Dockerfile  entrypoint  start_dev  start_production
docker/node/: Dockerfile
docker/postgres/: Dockerfile
docker/postgres/maintenance/: backups
frontend/: README.md  index.html  nx.json  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/app/: layout.tsx
frontend/src/: App.tsx  styled.d.ts
frontend/src/app/: app.tsx
frontend/src/components/: TodoItem.tsx  TodoList.tsx
frontend/src/hooks/: useTodos.ts
frontend/src/styles/: theme.ts
frontend/src/tests/: useTodos.test.ts
frontend/src/types/: styled.ts  todo.ts
