[tool.poetry]
name = "A simple To-Do app using React & Django"
version = "0.1.0"
description = ""
authors = ["Max Shapira <max@winoutt.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
pydantic = {extras = ["dotenv"], version = "^2.0.2"}
psycopg = {extras = ["binary"], version = "^3.1.9"}

[tool.poetry.group.dev.dependencies]
black = {version = "^23.7.0", allow-prereleases = true}
ruff = "^0.0.278"
isort = "^5.12.0"
mypy = "^1.3.0"
django-stubs = {extras = ["compatible-mypy"], version = "^4.2.3"}
pytest = "7.4.0"
pytest-sugar = "^0.9.6"

[tool.ruff]
line-length = 88
exclude = [
    '.git',
    '__pycache__',
    '__init__.py',
    '.mypy_cache',
    '.pytest_cache',
]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "C901",  # too complex
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
profile = "black"

[tool.mypy]
follow_imports = "silent"
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
no_implicit_reexport = true
check_untyped_defs = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
show_error_codes = true
plugins = [
  "mypy_django_plugin.main",
]

[tool.django-stubs]
django_settings_module = "config.settings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
